tests/models/struct/unnamed/i8/pass/ge.rs
use dade::model;
#[model]
struct TestModel (
   #[field(ge = 2)]
    i8
);
fn main() {}
